--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  flutter_launcher_icons: ^0.8.1
   flutter:
     sdk: flutter
   flutter_signin_button: ^1.1.0
@@ -30,6 +31,8 @@ dependencies:
   fluttertoast: ^7.1.1
   http: ^0.12.2
   flutter_spinkit: ^4.1.2
+  cloud_firestore: ^0.14.4
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +42,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
