--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,25 +42,23 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
+  flutter_native_splash: ^0.1.9
   flutter_test:
     sdk: flutter
 flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/logo.png"
+flutter_native_splash:
+  image: assets/splash.png
+  color: "ffffff"
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
   assets:
     - assets/welcomepage.jpg
+    - assets/splash.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
